@@ -4,7 +4,8 @@
 // See file LICENSE for detail or copy at http://jsoncpp.sourceforge.net/LICENSE
 
 // included by json_value.cpp
-// everything is within Json namespace
+
+namespace Json {
 
 // //////////////////////////////////////////////////////////////////
 // //////////////////////////////////////////////////////////////////
@@ -451,3 +452,5 @@ ValueInternalArray::compare( const ValueInternalArray &other ) const
    }
    return 0;
 }
+
+} // namespace Json
